use List.of instead if Arrays.asList and remove not needed whitespace in logs